--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
         <dependency><groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version></dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0.pr2</version>
+        </dependency>
     </dependencies>
 
     <packaging>war</packaging>
